--- a/FoodTracker/Base.lproj/Main.storyboard
+++ b/FoodTracker/Base.lproj/Main.storyboard
@@ -70,36 +70,22 @@
         <!--New Meal-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="FoodTracker" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MealViewController" customModule="FoodTracker" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="pyN-ka-tGk">
-                                <rect key="frame" x="8" y="95.999999999999972" width="359" height="483.33333333333326"/>
+                                <rect key="frame" x="8" y="96" width="359" height="433"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Meal Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Snx-Db-uy7">
-                                        <rect key="frame" x="0.0" y="0.0" width="359" height="20.333333333333332"/>
-                                        <gestureRecognizers/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter meal name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="d63-QO-Cev">
-                                        <rect key="frame" x="0.0" y="20.333333333333329" width="359" height="30"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="359" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hfD-1G-K7B">
-                                        <rect key="frame" x="0.0" y="50.333333333333343" width="153" height="30"/>
-                                        <state key="normal" title="Set default meal name"/>
-                                        <connections>
-                                            <action selector="setDefaultLabelText:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vTJ-2p-Y2s"/>
-                                        </connections>
-                                    </button>
                                     <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="320" placeholderIntrinsicHeight="320" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="UEe-9F-alD">
-                                        <rect key="frame" x="0.0" y="80.333333333333371" width="359" height="359"/>
+                                        <rect key="frame" x="0.0" y="30" width="359" height="359"/>
                                         <gestureRecognizers/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="UEe-9F-alD" secondAttribute="height" multiplier="1:1" id="AkV-HU-3kp"/>
@@ -109,20 +95,13 @@
                                         </connections>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="A0X-QC-vzg" userLabel="Rating Control" customClass="RatingControl" customModule="FoodTracker" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="439.33333333333337" width="252" height="44"/>
+                                        <rect key="frame" x="0.0" y="389" width="252" height="44"/>
                                     </stackView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="Snx-Db-uy7" firstAttribute="top" secondItem="pyN-ka-tGk" secondAttribute="top" id="1fv-UN-mkH"/>
-                                    <constraint firstItem="hfD-1G-K7B" firstAttribute="top" secondItem="d63-QO-Cev" secondAttribute="bottom" id="6Lt-xN-MHz"/>
-                                    <constraint firstItem="UEe-9F-alD" firstAttribute="top" secondItem="hfD-1G-K7B" secondAttribute="bottom" id="6gn-Z8-cFE"/>
                                     <constraint firstAttribute="trailing" secondItem="UEe-9F-alD" secondAttribute="trailing" id="B5N-ev-b7P"/>
-                                    <constraint firstItem="Snx-Db-uy7" firstAttribute="leading" secondItem="pyN-ka-tGk" secondAttribute="leading" id="GY5-8G-Ts2"/>
-                                    <constraint firstAttribute="trailing" secondItem="Snx-Db-uy7" secondAttribute="trailing" id="J1f-Js-0GZ"/>
                                     <constraint firstItem="d63-QO-Cev" firstAttribute="leading" secondItem="pyN-ka-tGk" secondAttribute="leading" id="NFh-pf-NX3"/>
-                                    <constraint firstItem="hfD-1G-K7B" firstAttribute="leading" secondItem="pyN-ka-tGk" secondAttribute="leading" id="SmV-Nv-bWh"/>
                                     <constraint firstItem="UEe-9F-alD" firstAttribute="leading" secondItem="pyN-ka-tGk" secondAttribute="leading" id="c4T-b5-rHa"/>
-                                    <constraint firstItem="d63-QO-Cev" firstAttribute="top" secondItem="Snx-Db-uy7" secondAttribute="bottom" id="lJL-Oy-qph"/>
                                     <constraint firstAttribute="trailing" secondItem="d63-QO-Cev" secondAttribute="trailing" id="uTq-wt-fUO"/>
                                 </constraints>
                             </stackView>
@@ -141,7 +120,6 @@
                         <barButtonItem key="rightBarButtonItem" title="Save" id="dmr-lv-ydm"/>
                     </navigationItem>
                     <connections>
-                        <outlet property="mealNameLabel" destination="Snx-Db-uy7" id="mYg-dT-yJ8"/>
                         <outlet property="nameTextField" destination="d63-QO-Cev" id="cCs-cq-XOk"/>
                         <outlet property="photoImageView" destination="UEe-9F-alD" id="MiO-U5-7P4"/>
                     </connections>
